k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp-home
  namespace: springapp-home
  labels:
    app: springapp-home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springapp-home
  template:
    metadata:
      labels:
        app: springapp-home
    spec:
      containers:
        - name: springapp-home
          image: engrsharvan1/springapp-home:b72633d62d32e36b656390e264a875a926eb2123
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
