k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springapp-home
  namespace: springapp-home
  labels:
    app: springapp-home
spec:
  selector:
    app: springapp-home
  ports:
    - name: http
      port: 80
      targetPort: 8080
