k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springapp-home
  namespace: springapp-home
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: springapp-home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springapp-home
                port:
                  number: 80
